apply plugin: 'java'
apply plugin: "com.gorylenko.gradle-git-properties"
apply plugin: 'com.google.protobuf'

group 'papyrus-global'
version '0.1'

buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
        jcenter()
    }
    dependencies {
        classpath "gradle.plugin.com.gorylenko.gradle-git-properties:gradle-git-properties:1.4.17"
        // ASSUMES GRADLE 2.12 OR HIGHER. Use plugin version 0.7.5 with earlier
        // gradle versions
        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.3'
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots/"
    }
}


task v {
    ext.springBoot = "1.5.6.RELEASE"
    ext.spring = "4.3.10.RELEASE"
    ext.springSecurity = "4.2.3.RELEASE"
    ext.grpc = '1.5.0' 
}

dependencies {
//  Spring
    compile "org.springframework.boot:spring-boot-starter:${v.springBoot}"
    compile "org.springframework.boot:spring-boot-starter-security:${v.springBoot}"
    compile "org.springframework.boot:spring-boot-configuration-processor:${v.springBoot}"
    compile "org.springframework.boot:spring-boot-starter-logging:${v.springBoot}"

//Ethereum
    compile ('org.web3j:core:2.3.0')


//GRPC
    compile "io.grpc:grpc-netty:${v.grpc}"
    compile "io.grpc:grpc-protobuf:${v.grpc}"
    compile "io.grpc:grpc-stub:${v.grpc}"
    compile "io.grpc:grpc-netty:${v.grpc}"
    compile "io.grpc:grpc-protobuf:${v.grpc}"
    compile "io.grpc:grpc-stub:${v.grpc}"

//    Libraries
    compile "com.fasterxml.jackson.core:jackson-annotations:2.9.0"
    compile "com.fasterxml.jackson.core:jackson-core:2.9.0"
    compile "com.fasterxml.jackson.core:jackson-databind:2.9.0"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.9"
    compile 'org.apache.commons:commons-lang3:3.5'
    compile 'org.apache.commons:commons-math3:3.6.1'

//    Developer tools

    compile "org.springframework.boot:spring-boot-devtools:${v.springBoot}"
    
//  Tests    
    testCompile "org.springframework.boot:spring-boot-starter-test:${v.springBoot}"
    testCompile 'junit:junit:4.12'
    testCompile 'org.openjdk.jmh:jmh-core-it:1.17'
    testCompile 'org.openjdk.jmh:jmh-generator-annprocess:1.17'


}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.3.0'
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${v.grpc}"
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {
                // To generate deprecated interfaces and static bindService method,
                // turn the enable_deprecated option to true below:
                option 'enable_deprecated=false'
            }
        }
    }
}

// Inform IntelliJ projects about the generated code.
apply plugin: 'idea'

idea {
    module {
        // Not using generatedSourceDirs because of
        // https://discuss.gradle.org/t/support-for-intellij-2016/15294/8
        sourceDirs += file("${projectDir}/build/generated/source/proto/main/java");
        sourceDirs += file("${projectDir}/build/generated/source/proto/main/grpc");
        sourceDirs += file("${projectDir}/build/generated/source/contracts/java");
    }
}

//task compile_contracts {
//    doLast {
//        println "Compiling contracts"
//        exec {
//            commandLine 'solc', '--add-std', '-o', 'build/solc', '--overwrite', 'zeppelin-solidity=node_modules/zeppelin-solidity', '--allow-paths', /Users/leonidtalalaev/Documents/Papyrus/state-channels/smart-contracts/node_modules/zeppelin-solidity/contracts contracts/*.sol --abi --bin'
//        }
//        exec {
//            commandLine 'docker', 'tag', conf.dockerTag, conf.dockerTagLatest
//        }
//        exec {
//            commandLine 'gcloud', 'docker', '--', 'push', conf.dockerTagLatest
//        }
//        exec {
//            commandLine 'docker', 'rmi', conf.dockerTag, conf.dockerTagLatest
//        }
//    }
//}

test {
    // set a system property for the test JVM(s)
    systemProperty 'some.prop', 'value'

    // explicitly include or exclude tests
    exclude '**/integration/**'

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    //    jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
    }
}
